tests/integration/snapshots/fixture/test_compilation_error_fixture.stderr.txt
Error: In counter:

[ROOT]/contracts/counter[LINE]: error: field `body2` doesn't exist in type `InMessage`

    // in function `onInternalMessage`
   6 |     val msg = lazy AllowedMessage.fromSlice(in.body2);
     |                                                ^^^^^

Build failed with 1 error
